src/test/ui/issues/10000-19999/issue-13446.rs
// Used to cause ICE

static VEC: [u32; 256] = vec![];
//~^ ERROR mismatched types

fn main() {}
